# ai_news_curator

./: .env.example  README.md  pyproject.toml
prompts/: classifier_prompt_few_shot.txt  classifier_prompt_zero_shot.txt  impact_prompt.txt  summary_prompt.txt
src/: __init__.py  cache.py  cli.py  main.py  models.py
src/ai_news_curator/: cache.py  cli.py  config.py  main.py
src/ai_news_curator/evaluation/: __init__.py  eval_classification.py  label_schema.md  sample_labels.json
src/ai_news_curator/fetchers/: rss_fetcher.py
src/ai_news_curator/llm/: client.py  prompts.py
src/ai_news_curator/pipeline/: classify.py  deduplicate.py  impact.py  report.py  summarize.py
src/evaluation/: eval_classification.py
src/fetchers/: __init__.py  rss_fetcher.py
src/llm/: __init__.py  client.py  prompts.py
src/pipeline/: __init__.py  classify.py  deduplicate.py  impact.py  report.py  summarize.py
