[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-news-curator"
version = "0.1.0"
description = "AI-powered news curator that fetches, classifies, scores, and summarizes tech/AI news"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "requests>=2.31.0",
    "feedparser>=6.0.10",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
ai-news-curator = "cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.json"]

